flatbottom_pipeline 改造完成,准备启动数据加载模块的改造。

--- a/docs/refinement_llm/2.概要设计文档.md
+++ b/docs/refinement_llm/2.概要设计文档.md
@@ -328,7 +328,7 @@ class LoggerConfig:
 
 ### 5.1 命令行接口
 ```bash
-python -m refinement_llm.main
+python -m flatbottom_pipeline.refinement_llm.main
 ```
 (参数同前文：`--image-dir`, `--model`, `--threshold`, `--batch-size`, `--debug`)
 
