准备修改stock analyzer的数据抽取模块.

--- a/docs/1.数据加载需求.md
+++ b/docs/1.数据加载需求.md
@@ -7,6 +7,6 @@ psql -h 172.29.128.1 -U postgres -d fin_db
 密码是：PostgreSQL-18
 5.在当前的wsl环境下，已经安装了psql客户端，你可以调用它访问数据库。
 6.当前项目根目录下有一个.venv的虚拟环境，我们使用uv管理依赖，如果对于当前项目需要的依赖，你可以写到文档中，我会手工执行它们。
-7.当前模块为数据加载模块，当前模块的代码都放在项目一个子目录下，比如load_data，或者你起一个更好的名字。
+7.当前模块为数据加载模块，当前模块的代码都放在项目一个子目录下，比如data_infra，或者你起一个更好的名字。
 8.数据库的连接信息，你可以放在项目根目录下的.env文件中，对于加载的其他参数，比如并行度等等，这些请放到config.py文件中。
 现在请你根据上面的需求，设计数据加载模块，包括模块的文件目录结构，依赖的包，目标表的表结构等等。再次提醒，当前数据库是postgresql v18 + timescaledb，我们后续需要访问这个数据库表，使用当前的数据生成月K线数据，所以我们才使用timescaledb作为时序数据库，以提高查询效率。
